# DoSSA-Lab-4

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/allocator/HeaderFiles/: CEcoLab4.h  CEcoLab4Factory.h
src/allocator/SharedFiles/: IEcoLab4.h  IdEcoLab4.h
src/allocator/SourceFiles/: CEcoLab4.c  CEcoLab4Factory.c
